# easy_build

./: .gitignore  .gitmodules  CMakeLists.txt  install.sh  makefile  readme.md
.github/workflows/: builds.yml
cmake/config/: openfoam_cgal.sh  openfoam_install.sh  openfoam_scotch.sh  scotch_makefile.inc
cmake/find/: FindARMADILLO.cmake  FindCGAL.cmake  FindCORK.cmake  FindEMBREE.cmake  FindGMP.cmake  FindIGL.cmake  FindJSON.cmake  FindMLPACK.cmake  FindTBB.cmake
cmake/include/: armadillo.cmake  arpack.cmake  boost.cmake  cereal.cmake  cgal.cmake  cork.cmake  dealii.cmake  eigen.cmake  embree.cmake  ensmallen.cmake  flex.cmake  gfortran.cmake  glfw.cmake  gmp.cmake  gtest.cmake  hdf5.cmake  hwloc.cmake  igl.cmake  json.cmake  lapack.cmake  liggghts.cmake  llvm.cmake  mfem.cmake  mlpack.cmake  mpfr.cmake  mpi.cmake  netcdf.cmake  netdem.cmake  openblas.cmake  openfoam.cmake  openmp.cmake  peridigm.cmake  petsc.cmake  pybind.cmake  python.cmake  scotch.cmake  stb.cmake  tbb.cmake  trilinos.cmake  voro.cmake  (+2 more)
